--- a/index.html
+++ b/index.html
@@ -4,57 +4,196 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles.css">
-    <title>Curriculum Vitae</title>
+    <title>Conf Bs As</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
-        <div id="cabecera">
-            <h1>Curriculum Vitae</h1>
-            <h2>Facundo Balderrama</h2>
+        <nav class="navbar bg-dark" data-bs-theme="dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="./images/codoacodo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+                Conf Bs As
+              </a>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled">Disabled</a>
+                    </li>
+                </ul> -->
+                <!-- <ul class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">La conferencia</a>
+                  <a class="nav-link" href="#">Los oradores</a>
+                  <a class="nav-link" href="#">El lugar y la fecha</a>
+                  <a class="nav-link" href="#">Conviértete en orador</a>
+                  <a class="nav-link" href="#">Comprar tickets</a>
+                </ul> -->
+            </div>
+              <div class="menu">
+                <a href="#" class="text-white">La conferencia</a>
+                <a href="#oradores" class="text-white">Los oradores</a>
+                <a href="#lugaryfecha" class="text-white">El lugar y la fecha</a>
+                <a href="#conviertete" class="text-white">Conviértete en orador</a>
+                <a href="#" class="text-success">Comprar tickets</a>
+              </div>
+            <!-- </div> -->
+        </nav>
+        <!-- <a href="#">
+            <img src="./images/codoacodo.png" alt="Logo">
+        </a>
+        <h2>Conf Bs As</h2>
+        <nav>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href="#" class="text-success">Compre</a>
+        </nav> -->
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <!-- <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div> -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/ba1.jpg" class="d-block w-100" alt="bs as">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Conf Bs As</h5>
+                <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
+                 conocimiento  y experiencia de los expertos que están creando el futuro de la Internet. Ven
+                a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer
+               nivel que tenemos para ti. Te esperamos!</p>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-success">Comprar tickets</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/ba2.jpg" class="d-block w-100" alt="bs as">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Conf Bs As</h5>
+                <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
+                  conocimiento  y experiencia de los expertos que están creando el futuro de la Internet. Ven
+                 a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer
+                nivel que tenemos para ti. Te esperamos!</p>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-success">Comprar tickets</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/ba3.jpg" class="d-block w-100" alt="bs as">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Conf Bs As</h5>
+                <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
+                  conocimiento  y experiencia de los expertos que están creando el futuro de la Internet. Ven
+                 a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer
+                nivel que tenemos para ti. Te esperamos!</p>
+                <button type="button" class="btn btn-outline-light">Quiero ser orador</button>
+                <button type="button" class="btn btn-success">Comprar tickets</button>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
         </div>
     </header>
     <main>
-        <aside>
-            <div id="fotoperfil">
-                <img src="https://drive.google.com/uc?export=view&id=1m7I0XitBKdqpKqN99mUbGBat28yU_STg" alt="Foto de perfil" width="200px" height="200px">
+      <div id="oradores">
+        <h2>Oradores</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          <div class="col">
+            <div class="card">
+              <img src="./images/steve.jpg" class="card-img-top" alt="Steve">
+              <div class="card-body">
+                <h5 class="card-title">Steve Jobs</h5>
+                <span class="badge text-bg-warning">Javascript</span>
+                <span class="badge text-bg-primary">React</span>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
             </div>
-            <div id="personalinfo">
-                <h3>Información Personal</h3>
-                <p>facu@mail.com</p>
-                <p>Tel:0303456</p>
-                <p>github.com/facu</p>
-                <p>linkedin.com/facu</p>
-                <p>Argentina</p>
-                
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="./images/bill.jpg" class="card-img-top" alt="Bill">
+              <div class="card-body">
+                <h5 class="card-title">Bill Gates</h5>
+                <span class="badge text-bg-warning">Javascript</span>
+                <span class="badge text-bg-primary">React</span>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
             </div>
-            <button type="button" class="btn btn-dark" id="botoncambiar">Dark Mode</button>
-            <button type="button" class="btn btn-light" id="botonoriginal">Light Mode</button>
-        </aside>
-        <section>
-            <div id="experiencia">
-                <h2>Experiencia</h2>
-                <button type="button" class="btn btn-success" id="btnexp">Mas info</button>
-                <h3>ICOM - Desarrollador de Software</h3>
-                <p>Desarrollo de páginas web y aplicaciones móviles y de escritorio.</p>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="./images/ada.jpeg" class="card-img-top" alt="Ada">
+              <div class="card-body">
+                <h5 class="card-title">Ada Lovelace</h5>
+                <span class="badge text-bg-secondary">Negocios</span>
+                <span class="badge text-bg-danger">Startups</span>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              </div>
             </div>
-            <div id="habilidades">
-                <h2>Habilidades</h2>
-                <button type="button" class="btn btn-success" id="btnskills">Mas info</button>
-                <ul>
-                    <li>Trabajo en equipo</li>
-                </ul>
-            </div>
-            <div id="educacion">
-                <h2>Educacion</h2>
-                <button type="button" class="btn btn-success" id="btnedu">Mas info</button>
-                <h3>Instituto M.R.S.N</h3>
-                <p>Secundario - Modalidad Bachiller Economía</p>
-            </div>
-        </section>
+          </div>
+        </div>
+      </div>
+      <div id="lugaryfecha">
+        <h2>Lugar y fecha</h2>
+        <img src="./images/honolulu.jpg" alt="Honolulu" class="split left">
+        <div id="lugarfecha" class="split right">
+          <h3>Bs As - Octubre</h3>
+          <p>
+            Buenos Aires es la provincia y localidad más grande del estado de Argentina, en los Estados
+          Unidos. Honolulu es la más sureña de entre las principales ciudades estadounidenses. Aunque el
+          nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de Oahu, la ciudad
+          y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la ciudad 
+          (aproximadamente 600 km<sup>2</sup> de superficie).
+          </p>
+        <button type="button" class="btn btn-outline-light">Conocé más</button>
+        </div>
+      </div>
+      <div id="conviertete">
+        <p>Conviertete en un</p>
+        <h2>ORADOR</h2>
+        <p>Anótate como orador para dar una charla ignite. Cuéntanos de qué quieres hablar!</p>
+        <form>
+          <!-- <label for="">Nombre</label> -->
+          <input type="text" name="nombre" id="nombre" value="Nombre">
+          <!-- <label for="">Apellido</label> -->
+          <input type="text" name="apellido" id="apellido" value="Apellido"><br>
+          <textarea name="mensaje" id="mensaje" cols="30" rows="3">Sobre qué quieres hablar?</textarea>
+          <p>Recuerda incluir un título para tu charla</p>
+          <input type="submit" value="Enviar" id="btnform">
+        </form>
+      </div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="./script.js"></script>
+    <footer>
+        <nav>
+            <a href="#" class="text-white">Preguntas frecuentes</a>
+            <a href="#" class="text-white">Contáctanos</a>
+            <a href="#" class="text-white">Prensa</a>
+            <a href="#" class="text-white">Conferencias</a>
+            <a href="#" class="text-white">Términos y condiciones</a>
+            <a href="#" class="text-white">Privacidad</a>
+            <a href="#" class="text-white">Estudiantes</a>
+        </nav>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <!-- <script src=""></script> -->
 </body>
 </html>
