--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar bg-dark" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
-                <img src="./images/codoacodo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+                <img src="https://drive.google.com/uc?export=view&id=1zCB5-0aU_w6hiMT7579aqenN0FQ8pMou" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
                 Conf Bs As
               </a>
               <div class="collapse navbar-collapse" id="navbarNav">
@@ -67,7 +67,7 @@
           </div> -->
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./images/ba1.jpg" class="d-block w-100" alt="bs as">
+              <img src="https://drive.google.com/uc?export=view&id=1ZrsmhJEcY2T4FQMAOO3u8DTgmLvsiDky" class="d-block w-100" alt="bs as">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Conf Bs As</h5>
                 <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
@@ -79,7 +79,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./images/ba2.jpg" class="d-block w-100" alt="bs as">
+              <img src="https://drive.google.com/uc?export=view&id=1jsTVuqqYizYGtxB5nw_8qwJgpyZOqKAH" class="d-block w-100" alt="bs as">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Conf Bs As</h5>
                 <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
@@ -91,7 +91,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./images/ba3.jpg" class="d-block w-100" alt="bs as">
+              <img src="https://drive.google.com/uc?export=view&id=1N7eJFDTLjIlKDkmGqaA5KyEKrffhKWYy" class="d-block w-100" alt="bs as">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Conf Bs As</h5>
                 <p>Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el
@@ -119,7 +119,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card">
-              <img src="./images/steve.jpg" class="card-img-top" alt="Steve">
+              <img src="https://drive.google.com/uc?export=view&id=1iLmQV4F_lva4UfM8ieIUz4UO6ZK7BhIA" class="card-img-top" alt="Steve">
               <div class="card-body">
                 <h5 class="card-title">Steve Jobs</h5>
                 <span class="badge text-bg-warning">Javascript</span>
@@ -130,7 +130,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="./images/bill.jpg" class="card-img-top" alt="Bill">
+              <img src="https://drive.google.com/uc?export=view&id=1bSThnkTizZOupzf9sp7_L869oVzil3cC" class="card-img-top" alt="Bill">
               <div class="card-body">
                 <h5 class="card-title">Bill Gates</h5>
                 <span class="badge text-bg-warning">Javascript</span>
@@ -141,7 +141,7 @@
           </div>
           <div class="col">
             <div class="card">
-              <img src="./images/ada.jpeg" class="card-img-top" alt="Ada">
+              <img src="https://drive.google.com/uc?export=view&id=1ptvj-8-a5S3oNkwMwXRqn3Y0Zg4WR2uO" class="card-img-top" alt="Ada">
               <div class="card-body">
                 <h5 class="card-title">Ada Lovelace</h5>
                 <span class="badge text-bg-secondary">Negocios</span>
@@ -154,7 +154,7 @@
       </div>
       <div id="lugaryfecha">
         <h2>Lugar y fecha</h2>
-        <img src="./images/honolulu.jpg" alt="Honolulu" class="split left">
+        <img src="https://drive.google.com/uc?export=view&id=1KljNDqBQBlLB9sfsShGA5ASR1qpwv0sD" alt="Honolulu" class="split left">
         <div id="lugarfecha" class="split right">
           <h3>Bs As - Octubre</h3>
           <p>
